--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   --blue_neon: #006af9;
   --white: #ffffff;
   --background: #dbdbdb;
+  --screen_size: 1000px;
 }
 
 
@@ -34,7 +35,7 @@ html {
   scroll-snap-align: center;
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 1000px){
   html{
     scroll-snap-type: none;
   }
@@ -97,7 +98,7 @@ section {
   border-bottom: 3px solid #4deeea;
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 1000px){
   .nav-wrapper ul{
     display: none;
   }
@@ -213,7 +214,7 @@ ul > li a{
 }
 
 
-@media only screen and (max-width:600px){
+@media only screen and (max-width:1000px){
   #main{
     height: auto;
     margin-top: 2rem;
@@ -237,6 +238,26 @@ ul > li a{
   .photo img{
     width: 250px;
   }
+
+  .desc{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .desc h2{
+    margin-left: 4rem;
+  }
+  .para {
+    width: 100%;
+    text-align: justify;
+  }
+
+  .social-links {
+    width: 60%;
+  }
+  
 
 }
 /* ABOUT */
@@ -288,10 +309,10 @@ ul > li a{
   text-underline-offset: 3px;
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 1000px){
   #education{
     height: auto;
-    margin-top: 4rem;
+    margin-top: 5rem;
   }
 
   .education-wrapper{
@@ -354,10 +375,10 @@ ul > li a{
   text-underline-offset: 3px;
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 1000px){
   #internship{
     height: auto;
-    margin-top: 4rem;
+    margin-top: 5rem;
   }
 
   .internship-wrapper{
@@ -380,7 +401,7 @@ ul > li a{
   scroll-snap-align: start;
 }
 
-#projects h1 {
+#projects h2 {
   margin-bottom: 40px;
   margin-left: 5rem;
   font-family: "Cedarville Cursive", cursive;
@@ -459,14 +480,14 @@ ul > li a{
   text-decoration: underline;
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 1000px){
   #projects{
     height: auto;
     margin-top: 4rem;
   }
 
-  #projects h1 {
-    margin-bottom: 40px;
+  #projects h2 {
+    margin-bottom: 0.5rem;
     margin-left: 2rem;
     font-family: "Cedarville Cursive", cursive;
     color: black;
@@ -531,10 +552,10 @@ ul > li a{
   font-size: 2rem;
 }
 
-@media only screen and (max-width:600px){
+@media only screen and (max-width:1000px){
   #certifications{
     height: auto;
-    margin-top: 3rem;
+    margin-top: 5rem;
     margin-bottom: 3rem;
   }
 
