--- a/style.css
+++ b/style.css
@@ -436,8 +436,8 @@ ul > li a{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
+  /* backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px); */
   border-radius: 5px;
   border: 0px solid rgba(255, 255, 255, 0.18);
   color: black;
