--- a/style.css
+++ b/style.css
@@ -28,11 +28,11 @@ a {
 html {
   overflow-y: scroll;
   scroll-behavior: smooth;
-  scroll-snap-type: y mandatory;
+  /* scroll-snap-type: y mandatory; */
 }
 
 .scroll {
-  scroll-snap-align: center;
+  /* scroll-snap-align: center; */
 }
 
 @media only screen and (max-width: 1000px){
@@ -263,11 +263,12 @@ ul > li a{
 /* ABOUT */
 
 #education {
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   scroll-snap-align: start;
+  margin-top: 5rem;
 }
 
 .education-wrapper {
@@ -276,7 +277,7 @@ ul > li a{
 
 .heading {
   width: 40%;
-  margin-top: -5%;
+  /* margin-top: -5%; */
 }
 
 .heading h1 {
@@ -323,11 +324,12 @@ ul > li a{
 /* INTERNSHIPS */
 
 #internship {
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   scroll-snap-align: start;
+  margin-top: 5rem;
 }
 
 .internship-wrapper {
@@ -336,7 +338,7 @@ ul > li a{
 
 .internship-wrapper .heading {
   width: 40%;
-  margin-top: -5%;
+  /* margin-top: -5%; */
 }
 
 .internship-wrapper .heading h1 {
@@ -394,15 +396,16 @@ ul > li a{
 } */
 
 #projects {
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   scroll-snap-align: start;
+  margin-top: 5rem;
 }
 
 #projects h2 {
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   margin-left: 5rem;
   font-family: "Cedarville Cursive", cursive;
   color: black;
@@ -516,12 +519,14 @@ ul > li a{
 
 /*CERTIFICATIONS*/
 #certifications {
-  height: 100vh;
+  height: auto;
   background-color: var(--background);
   display: flex;
   flex-direction: column;
   justify-content: center;
   scroll-snap-align: start;
+  margin-top: 7rem;
+  margin-bottom: 4rem;
 }
 
 .certifications-wrapper {
