Change background color

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 :root {
   --blue_neon: #006af9;
   --white: #ffffff;
-  --background: #dbdbdb;
+  --background: #fffcfc;
   --screen_size: 1000px;
 }
 
