--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@
 
 :root {
   --blue_neon: #006af9;
+  /* --dark_blue: #7ca8cc; */
   --white: #ffffff;
-  --background: #fffcfc;
+  /* --background: #fffcfc; */
+  --background: #ffffff;;
   --screen_size: 1000px;
 }
 
@@ -27,7 +29,7 @@ a {
 
 html {
   overflow-y: scroll;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
   /* scroll-snap-type: y mandatory; */
 }
 
@@ -59,9 +61,9 @@ section {
   display: flex;
   justify-content: space-between;
   margin: 0;
-  position: fixed;
+  /* position: fixed;
   top: 0;
-  left: 0;
+  left: 0; */
   background: var(--background);
 
   backdrop-filter: blur(4px);
@@ -91,6 +93,7 @@ section {
 .nav-wrapper ul > li > a {
   padding: 5px 10px;
   color: var(--blue_neon);
+  /* color: var(--dark_blue); */
   transition: border ease-in;
 }
 
@@ -120,6 +123,14 @@ section {
   /* height: 100%; */
   display: flex;
   align-items: center;
+
+  padding: 4rem 2rem;
+  margin: 0 4rem;
+  margin-top: -2rem;
+
+  background-color: #f8f8f8; /* Section background color */
+  box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+  border-radius:10px;
 }
 .main-wrapper div {
   width: 50%;
@@ -141,12 +152,13 @@ section {
 }
 
 .desc h2 {
-  font-family: "Cedarville Cursive", cursive;
+  /* font-family: "Cedarville Cursive", cursive; */
+  font-family: 'Playfair Display', serif;
   letter-spacing: 1.5px;
   font-size: 2rem;
   overflow: hidden;
   white-space: nowrap;
-  width: 12ch;
+  width: 13ch;
   animation: typing 1.4s steps(12);
 }
 
@@ -164,6 +176,7 @@ section {
 .desc span {
   font-weight: 400;
   color: var(--blue_neon);
+  font-weight: bold;
 }
 
 .desc span .vertical_line {
@@ -178,10 +191,12 @@ section {
   font-size: 1rem;
 }
 
-.desc p span{
-  color: var(--blue_neon);
-  text-decoration: underline;
-  text-underline-offset: 3px;
+.desc .para span{
+  /* color: var(--blue_neon); */
+  /* text-decoration: underline; */
+  /* text-underline-offset: 3px; */
+
+  font-weight: bold;
 }
 
 .social-wrapper {
@@ -268,11 +283,16 @@ ul > li a{
   flex-direction: column;
   justify-content: center;
   scroll-snap-align: start;
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
 }
 
 .education-wrapper {
-  padding-left: 5rem;
+  padding: 2rem;
+  margin: 0 4rem;
+
+  background-color: #f8f8f8; /* Section background color */
+  box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+  border-radius:10px;
 }
 
 .heading {
@@ -281,11 +301,19 @@ ul > li a{
 }
 
 .heading h1 {
-  font-family: "Cedarville Cursive", cursive;
-  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
+  font-weight:500;
+  font-size: 1.56rem;
 }
 
+.heading h1 i{
+  font-size: 1.2rem;
+  margin-right:10px;
+}
 .education_info{
+  margin-top:1.1rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -302,7 +330,7 @@ ul > li a{
 }
 
 .education_info .ed .degree{
-  font-style: italic;
+  font-weight: 800;
 }
 
 .education_info .ed .coursework span{
@@ -333,7 +361,12 @@ ul > li a{
 }
 
 .internship-wrapper {
-  padding-left: 5rem;
+  padding: 2rem;
+  margin: 0 4rem;
+
+  background-color: #f8f8f8; /* Section background color */
+  box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+  border-radius:10px;
 }
 
 .internship-wrapper .heading {
@@ -342,11 +375,13 @@ ul > li a{
 }
 
 .internship-wrapper .heading h1 {
-  font-family: "Cedarville Cursive", cursive;
-  font-size: 2rem;
+  font-family: 'Roboto', sans-serif;
+  font-weight:500;
+  font-size: 1.56rem;
 }
 
 .internship_info{
+  margin-top: 1.1rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -363,7 +398,8 @@ ul > li a{
 }
 
 .internship_info .intern .position{
-  font-style: italic;
+  /* font-style: italic; */
+  font-weight: 800;
 }
 
 .internship_info .intern .info ol{
@@ -407,20 +443,28 @@ ul > li a{
 #projects h2 {
   margin-bottom: 10px;
   margin-left: 5rem;
-  font-family: "Cedarville Cursive", cursive;
+  font-family: 'Roboto', sans-serif;
+  font-weight:500;
+  font-size: 1.56rem;
   color: black;
-  font-size: 2rem;
 }
 .projects-wrapper {
   /* display: grid;
   grid-template-columns: repeat(2, 1fr); */
   display: flex;
-  gap: 20px
+  gap: 20px;
+
+  padding: 2rem;
+  margin: 0 4rem;
+
+  background-color: #f8f8f8; /* Section background color */
+  box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+  border-radius:10px;
 }
 
 .projects-wrapper #column1{
   width: 50%;
-  margin-left: 5rem;
+  /* margin-left: 5rem; */
 }
 
 .projects-wrapper #column2{
@@ -462,6 +506,9 @@ ul > li a{
   margin-right: 8px;
 }
 
+.card-content .info{
+  text-align: justify;
+}
 .card-content .info ul{
   padding-top: 0.7rem;
   padding-left: 1rem;
@@ -527,24 +574,38 @@ ul > li a{
   scroll-snap-align: start;
   margin-top: 7rem;
   margin-bottom: 4rem;
+
 }
 
 .certifications-wrapper {
-  padding-left: 5rem;
+  padding: 2rem;
+  margin: 0 4rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+
+  background-color: #f8f8f8; /* Section background color */
+  box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+  border-radius:10px;
 }
 
 .certifications-wrapper .heading {
   width: 40%;
-  margin-top: -5%;
+  /* margin-top: -5%; */
 }
 
 .certifications-wrapper .heading h1 {
-  font-family: "Cedarville Cursive", cursive;
-  font-size: 2rem;
+  font-family: 'Roboto', sans-serif;
+  font-weight:500;
+  font-size: 1.56rem;
 }
 
 .certification_info{
   width: 60%;
+  padding-left: 1.2rem;
+  padding-top: 1.3rem;
 }
 
 .certifications-wrapper .heading2 {
@@ -553,8 +614,9 @@ ul > li a{
 }
 
 .certifications-wrapper .heading2 h1 {
-  font-family: "Cedarville Cursive", cursive;
-  font-size: 2rem;
+  font-family: 'Roboto', sans-serif;
+  font-weight:500;
+  font-size: 1.56rem;
 }
 
 @media only screen and (max-width:1000px){
