--- a/style.css
+++ b/style.css
@@ -111,11 +111,12 @@ section {
 /* MAIN */
 
 #main {
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   scroll-snap-align: start;
+  margin-bottom: 5rem;
 
   /* align-items: center; */
 }
@@ -126,10 +127,12 @@ section {
 
   padding: 4rem 2rem;
   margin: 0 4rem;
-  margin-top: -2rem;
 
   background-color: #f8f8f8; /* Section background color */
   box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+
+  box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; */
+  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f;
   border-radius:10px;
 }
 .main-wrapper div {
@@ -289,9 +292,13 @@ ul > li a{
 .education-wrapper {
   padding: 2rem;
   margin: 0 4rem;
+  padding-bottom: 4rem;
 
   background-color: #f8f8f8; /* Section background color */
   box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+
+  box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; */
+  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f;
   border-radius:10px;
 }
 
@@ -303,6 +310,7 @@ ul > li a{
 .heading h1 {
   display: flex;
   align-items: center;
+  color: #f96a00;
   font-family: 'Roboto', sans-serif;
   font-weight:500;
   font-size: 1.56rem;
@@ -367,6 +375,10 @@ ul > li a{
   background-color: #f8f8f8; /* Section background color */
   box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
   border-radius:10px;
+
+  /* background-color: #f0f0f0; */
+  box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; */
+  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f;
 }
 
 .internship-wrapper .heading {
@@ -440,9 +452,23 @@ ul > li a{
   margin-top: 5rem;
 }
 
-#projects h2 {
+
+.projects-outer-wrapper{
+  display:flex;
+  flex-direction: column;  
+  padding: 2rem;
+  margin: 0 4rem;
+
+  background-color: #f8f8f8; /* Section background color */
+  box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+
+  box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; */
+  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f;
+  border-radius:10px;
+}
+
+.projects-outer-wrapper h2 {
   margin-bottom: 10px;
-  margin-left: 5rem;
   font-family: 'Roboto', sans-serif;
   font-weight:500;
   font-size: 1.56rem;
@@ -453,13 +479,6 @@ ul > li a{
   grid-template-columns: repeat(2, 1fr); */
   display: flex;
   gap: 20px;
-
-  padding: 2rem;
-  margin: 0 4rem;
-
-  background-color: #f8f8f8; /* Section background color */
-  box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
-  border-radius:10px;
 }
 
 .projects-wrapper #column1{
@@ -497,11 +516,12 @@ ul > li a{
   border-bottom: 1px solid;
 }
 .card-content a {
-  color: black;
+  color: var(--blue_neon);
   font-size: 1.2rem;
   font-weight: 800;
 }
 .card-content i {
+  color: black;
   font-size: 0.8rem;
   margin-right: 8px;
 }
@@ -588,6 +608,9 @@ ul > li a{
 
   background-color: #f8f8f8; /* Section background color */
   box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+
+  box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; */
+  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f;
   border-radius:10px;
 }
 
