--- a/style.css
+++ b/style.css
@@ -16,11 +16,16 @@
 
 body {
   margin-top: 0;
-  font-family: 'Montserrat', sans-serif;
+  /* font-family: 'Montserrat', sans-serif; */
   min-height: 100vh;
   background-color: var(--background);
   color: black;
   position: relative;
+}
+
+h1, h2{
+  font-family: "Raleway", sans-serif;
+
 }
 a {
   text-decoration: none;
@@ -353,7 +358,7 @@ ul > li a{
 }
 
 .heading {
-  width: 40%;
+  /* width: 40%; */
   /* margin-top: -5%; */
 }
 
@@ -361,7 +366,8 @@ ul > li a{
   display: flex;
   align-items: center;
   color: #f96a00;
-  font-family: 'Roboto', sans-serif;
+  /* font-family: 'Roboto', sans-serif; */
+  font-family: "Raleway", sans-serif;
   font-weight:500;
   font-size: 1.56rem;
 }
@@ -432,7 +438,7 @@ ul > li a{
 }
 
 .internship-wrapper .heading {
-  width: 40%;
+  /* width: 40%; */
   /* margin-top: -5%; */
 }
 
@@ -468,6 +474,10 @@ ul > li a{
   padding-top: 1rem;
   padding-left: 1rem;
   list-style-type: lower-roman;
+}
+
+.internship_info .intern .info ol li{
+  font-size: 1.1rem;
 }
 
 .internship_info .intern .coursework span{
@@ -584,7 +594,8 @@ ul > li a{
   padding-left: 1rem;
 }
 .card-content .info ul li{
-  font-size: 1rem;
+  font-size: 1.1rem;
+  font-weight: normal;
 }
 
 .card-content p #teeter_demo a{
@@ -665,7 +676,7 @@ ul > li a{
 }
 
 .certifications-wrapper .heading {
-  width: 40%;
+  /* width: 40%; */
   /* margin-top: -5%; */
 }
 
@@ -681,8 +692,12 @@ ul > li a{
   padding-top: 1.3rem;
 }
 
+.certification_info ol li{
+  font-size: 1.1rem;
+}
+
 .certifications-wrapper .heading2 {
-  width: 40%;
+  /* width: 40%; */
   margin-top: 2rem;
 }
 
@@ -801,4 +816,84 @@ ul > li a{
 
 .contact-img img {
   width: 500px;
+}
+
+
+#languages {
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  scroll-snap-align: start;
+  margin-top: 5rem;
+}
+
+.languages-wrapper {
+  padding: 2rem;
+  margin: 0 2rem;
+
+  background-color: #f8f8f8; /* Section background color */
+  box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+  border-radius:10px;
+
+  /* background-color: #f0f0f0; */
+  box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; */
+  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f;
+}
+
+.languages-wrapper .heading {
+  /* width: 40%; */
+  /* margin-top: -5%; */
+}
+
+.languages-wrapper .heading h1 {
+  font-family: 'Roboto', sans-serif;
+  font-weight:500;
+  font-size: 1.56rem;
+}
+
+
+.languages-logos {
+  margin-top: 1rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 20px; /* Padding around the entire grid */
+}
+
+.grid-item {
+  outline: 2px solid #e3e3e3;
+  padding: 20px 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff; /* Ensure a white background */
+  /* box-shadow: 5px 5px 15px rgba(0,0,0,0.1); Optional: shadow effect */
+}
+
+.grid-item img {
+  max-width: 100%;
+  max-height: 100px; /* Adjust the size as needed */
+  display: block;
+  transition: transform 0.5s ease;
+}
+
+.grid-item img:hover {
+  transform: scale(1.1); /* Scale up by 10% on hover */
+  cursor: pointer;
+}
+
+@media (max-width: 1200px) {
+  .languages-logos {
+      grid-template-columns: repeat(3, 1fr); /* 3 items per row for medium screens */
+  }
+}
+@media (max-width: 768px) {
+  .languages-logos {
+      grid-template-columns: repeat(2, 1fr); /* 2 items per row for small screens */
+  }
+}
+@media (max-width: 480px) {
+  .languages-logos {
+      grid-template-columns: 1fr; /* 1 item per row for very small screens */
+  }
 }
