--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   /* font-family: 'Montserrat', sans-serif; */
   min-height: 100vh;
   background-color: var(--background);
-  color: black;
+  color: #434343;
   position: relative;
 }
 
@@ -40,6 +40,49 @@ html {
 
 .scroll {
   /* scroll-snap-align: center; */
+}
+
+.heading {
+  /* width: 40%; */
+  /* margin-top: -5%; */
+}
+
+.heading h1 {
+  display: flex;
+  align-items: center;
+  color: #f96a00;
+  /* font-family: 'Roboto', sans-serif; */
+  font-family: "Raleway", sans-serif;
+  font-weight:500;
+  font-size: 1.56rem;
+  position: relative;
+}
+
+.heading h1 span {
+  position: relative;
+  text-transform: capitalize;
+  padding-bottom: 5px;
+}
+
+.heading h1 span::after {
+  content: '';
+  display: block;
+  width: 40px;
+  height: 2px;
+  background: #00bfa5;
+  position: absolute;
+  bottom: -10%;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: width 0.3s ease;
+}
+
+.heading h1 span:hover::after {
+  width: 100%;
+}
+.heading h1 i{
+  font-size: 1.2rem;
+  margin-right:10px;
 }
 
 @media only screen and (max-width: 1000px){
@@ -244,10 +287,10 @@ ul > li a{
   margin: 0 2rem;
 
   background-color: #f8f8f8; /* Section background color */
-  box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+  /* box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff; */
 
-  box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; */
-  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f;
+  /* box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; 
+  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f; */
   border-radius:10px;
   text-align: left;
 }
@@ -350,32 +393,13 @@ ul > li a{
   padding-bottom: 4rem;
 
   background-color: #f8f8f8; /* Section background color */
-  box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+  /* box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff; */
 
-  box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; */
-  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f;
+  /* box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; 
+  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f; */
   border-radius:10px;
 }
 
-.heading {
-  /* width: 40%; */
-  /* margin-top: -5%; */
-}
-
-.heading h1 {
-  display: flex;
-  align-items: center;
-  color: #f96a00;
-  /* font-family: 'Roboto', sans-serif; */
-  font-family: "Raleway", sans-serif;
-  font-weight:500;
-  font-size: 1.56rem;
-}
-
-.heading h1 i{
-  font-size: 1.2rem;
-  margin-right:10px;
-}
 .education_info{
   margin-top:1.1rem;
   display: flex;
@@ -429,12 +453,12 @@ ul > li a{
   margin: 0 2rem;
 
   background-color: #f8f8f8; /* Section background color */
-  box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+  /* box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff; */
   border-radius:10px;
 
   /* background-color: #f0f0f0; */
-  box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; */
-  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f;
+  /* box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; 
+  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f; */
 }
 
 .internship-wrapper .heading {
@@ -478,6 +502,7 @@ ul > li a{
 
 .internship_info .intern .info ol li{
   font-size: 1.1rem;
+  width: 70%;
 }
 
 .internship_info .intern .coursework span{
@@ -493,6 +518,10 @@ ul > li a{
 
   .internship-wrapper{
     padding-left: 2rem;
+  }
+
+  .internship_info .intern .info ol li{
+    width: 100%;
   }
 }
 
@@ -520,10 +549,10 @@ ul > li a{
   margin: 0 2rem;
 
   background-color: #f8f8f8; /* Section background color */
-  box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+  /* box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff; */
 
-  box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; */
-  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f;
+  /* box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; 
+  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f; */
   border-radius:10px;
 }
 
@@ -587,7 +616,7 @@ ul > li a{
 }
 
 .card-content .info{
-  text-align: justify;
+  /* text-align: justify; */
 }
 .card-content .info ul{
   padding-top: 0.7rem;
@@ -596,6 +625,7 @@ ul > li a{
 .card-content .info ul li{
   font-size: 1.1rem;
   font-weight: normal;
+  color: #434343;
 }
 
 .card-content p #teeter_demo a{
@@ -668,10 +698,10 @@ ul > li a{
   gap: 20px;
 
   background-color: #f8f8f8; /* Section background color */
-  box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+  /* box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff; */
 
-  box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; */
-  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f;
+  /* box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; 
+  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f; */
   border-radius:10px;
 }
 
@@ -833,12 +863,12 @@ ul > li a{
   margin: 0 2rem;
 
   background-color: #f8f8f8; /* Section background color */
-  box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff;
+  /* box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff; */
   border-radius:10px;
 
   /* background-color: #f0f0f0; */
-  box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; */
-  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f;
+  /* box-shadow: 5px 5px 10px #c7c7c7, -5px -5px 10px #ffffff; 
+  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f; */
 }
 
 .languages-wrapper .heading {
