--- a/style.css
+++ b/style.css
@@ -390,7 +390,7 @@ ul > li a{
 .education-wrapper {
   padding: 2rem;
   margin: 0 2rem;
-  padding-bottom: 4rem;
+  padding-bottom: 2rem;
 
   background-color: #f8f8f8; /* Section background color */
   /* box-shadow: 5px 5px 15px #d0d0d0, -5px -5px 15px #ffffff; */
@@ -405,6 +405,18 @@ ul > li a{
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  position: relative;
+}
+
+.education_info::before{
+  content: '';
+  position: absolute;
+  left: 8px;
+  top: 7px;
+  width: 2px;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #00bfa5;
 }
 
 .education_info .ed h3{
@@ -426,6 +438,22 @@ ul > li a{
   text-underline-offset: 3px;
 }
 
+.ed {
+  position: relative;
+  padding-left: 30px;
+  margin-bottom: 10px;
+}
+
+.ed::before {
+  content: '';
+  position: absolute;
+  left: 4px;
+  top: 7px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #00bfa5; /* Color of the bullet point */
+}
 @media only screen and (max-width: 1000px){
   #education{
     height: auto;
@@ -477,6 +505,7 @@ ul > li a{
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  position: relative;
 }
 
 .internship_info .intern h3{
@@ -508,6 +537,34 @@ ul > li a{
 .internship_info .intern .coursework span{
   text-decoration: underline ;
   text-underline-offset: 3px;
+}
+
+.internship_info::before{
+  content: '';
+  position: absolute;
+  left: 8px;
+  top: 7px;
+  width: 2px;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #00bfa5;
+}
+
+.intern {
+  position: relative;
+  padding-left: 30px;
+  margin-bottom: 0px;
+}
+
+.intern::before {
+  content: '';
+  position: absolute;
+  left: 4px;
+  top: 7px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #00bfa5; /* Color of the bullet point */
 }
 
 @media only screen and (max-width: 1000px){
@@ -572,15 +629,54 @@ ul > li a{
 
 .projects-wrapper #column1{
   width: 50%;
+  position: relative;
   /* margin-left: 5rem; */
 }
 
 .projects-wrapper #column2{
   width: calc(100% - 50% - 5rem);
+  position: relative;
 }
+
+#column1::before{
+  content: '';
+  position: absolute;
+  left: 8px;
+  top: 7px;
+  width: 2px;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #00bfa5;
+} 
+
+#column2::before{
+  content: '';
+  position: absolute;
+  left: 8px;
+  top: 7px;
+  width: 2px;
+  height: 75%;
+  border-radius: 50%;
+  background-color: #00bfa5;
+}
+
 .card {
   overflow: auto;
   width: 100%;
+  position: relative;
+  padding-left: 30px;
+  margin-bottom: 0px;
+}
+
+.card::before {
+  content: '';
+  position: absolute;
+  left: 4px;
+  top: 18px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #00bfa5; /* Color of the bullet point */
 }
 .card-content {
   width: 100%;
