--- a/style.css
+++ b/style.css
@@ -984,15 +984,24 @@ ul > li a{
   box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #3f3f3f; */
 }
 
+.form-map{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
+}
 
-#contact form {
+.contact-form{
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+}
+.contact-form form {
   color: black;
-  width: 45%;
   display: flex;
   flex-direction: column;
   padding: 20px;
-  /* background-color: rgba(34, 48, 60, 0.65); */
-  /* border-radius: 10px; */
+  width: 100%;
 }
 
 .form-control {
@@ -1022,7 +1031,7 @@ ul > li a{
   border: 1px solid #00bfa5;
 }
 
-#contact form button {
+.contact-form form button {
   width: 140px;
   height: 35px;
   padding: 10px 7px;
@@ -1034,10 +1043,24 @@ ul > li a{
   cursor: pointer;
 }
 
+.contact-map{
+  width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.contact-map figure{
+  height: 100%;
+}
+
 
 @media only screen and (max-width: 1000px){
   #contact form{
     width: 100%;
+  }
+
+  .form-map{
+    flex-direction: column;
   }
 }
 
